Update appointment management features and enhance internationalization support
- Added new appointment fields for location and reminder time in the AppointmentsScreen.
- Integrated Doctolib appointment import functionality, allowing users to fetch and add appointments from Doctolib.
- Updated Redux state management to handle new appointment attributes and actions.
- Enhanced internationalization support by adding new keys for appointment-related texts in English, Spanish, and French.
- Improved UI components for better user experience in managing appointments.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -147,7 +147,7 @@
     "caution": "Caution"
   },
   "health": {
-    "title": "Health Tracker",
+    "title": "Health Tracking",
     "dailySymptoms": "Daily Symptoms",
     "symptomsDescription": "Track your pregnancy symptoms and their severity",
     "kickCounter": "Kick Counter",
@@ -159,13 +159,14 @@
     "endSession": "End Session",
     "severityLabel": "Severity (1-5)",
     "notesLabel": "Notes",
-    "notesPlaceholder": "Add any notes here...",
+    "notesPlaceholder": "Add notes here...",
     "removeSymptom": "Remove Symptom",
     "confirmRemoveSymptom": "Are you sure you want to remove this symptom?",
-    "endKickSession": "End Kick Counting Session",
+    "endKickSession": "End Kick Session",
     "kickSessionSummary": "You recorded {{count}} kicks in {{time}}",
-    "kickNotesPlaceholder": "Add any notes about this kick counting session...",
+    "kickNotesPlaceholder": "Add notes about this kick counting session...",
     "severity": "Severity",
+    "doctorLabel": "Doctor",
     "symptoms": {
       "nausea": "Nausea",
       "fatigue": "Fatigue",
@@ -355,7 +356,7 @@
     "upcomingTitle": "Upcoming",
     "pastTitle": "Past",
     "addButton": "Add Appointment",
-    "dateTimeLabel": "Date & Time",
+    "dateTimeLabel": "Date",
     "locationLabel": "Location",
     "typeLabel": "Type",
     "titleLabel": "Title",
@@ -364,13 +365,38 @@
     "descriptionLabel": "Description",
     "notesLabel": "Notes",
     "reminderLabel": "Set Reminder",
+    "reminderTimeLabel": "Reminder Time",
+    "minutesBefore": "min",
     "noAppointments": "No appointments scheduled",
+    "noPastAppointments": "No past appointments",
     "tapToAddAppointment": "Tap the button above to add your first appointment",
     "editAppointment": "Edit Appointment",
     "addNewAppointment": "New Appointment",
-    "titleRequired": "Please enter an appointment title",
+    "titleRequired": "Please enter a title for the appointment",
     "titlePlaceholder": "Enter appointment title",
-    "notesPlaceholder": "Enter any notes for this appointment"
+    "locationPlaceholder": "Enter location",
+    "notesPlaceholder": "Add notes for this appointment",
+    "deleteConfirmTitle": "Delete Appointment",
+    "deleteConfirmMessage": "Are you sure you want to delete this appointment?",
+    "error": "Error",
+    "findOnDoctolib": "Find a doctor on Doctolib",
+    "specialtyLabel": "Medical Specialty",
+    "specialtyPlaceholder": "e.g. Obstetrician, Gynecologist",
+    "cityLabel": "City/Location",
+    "cityPlaceholder": "e.g. Paris, Lyon",
+    "searchDoctolib": "Search on Doctolib",
+    "doctolibInfo": "You will be redirected to Doctolib to make your appointment. Appointments booked on Doctolib will need to be manually added to BumpBuddy.",
+    "doctolibError": "Connection Error",
+    "doctolibErrorMessage": "Unable to connect to Doctolib. Please check your internet connection and try again.",
+    "source": "Source",
+    "importFromDoctolib": "Import from Doctolib",
+    "doctolibAppointmentFound": "We noticed you recently booked an appointment on Doctolib. Would you like to import it to BumpBuddy?",
+    "appointmentWith": "Appointment with",
+    "importAppointment": "Import this appointment",
+    "appointmentAdded": "Appointment Added",
+    "doctolibAppointmentImported": "The Doctolib appointment has been successfully imported to your BumpBuddy calendar.",
+    "errorImportingAppointment": "An error occurred while importing the appointment. Please try again.",
+    "checkingDoctolib": "Checking Doctolib appointments..."
   },
   "settings": {
     "title": "Settings",
