--- a/bumpbuddy/src/i18n/languages/es.json
+++ b/bumpbuddy/src/i18n/languages/es.json
@@ -149,23 +149,24 @@
   "health": {
     "title": "Seguimiento de Salud",
     "dailySymptoms": "Síntomas Diarios",
-    "symptomsDescription": "Haz un seguimiento de tus síntomas del embarazo y su gravedad",
+    "symptomsDescription": "Registre sus síntomas del embarazo y su gravedad",
     "kickCounter": "Contador de Patadas",
-    "kickCounterDescription": "Sigue los movimientos de tu bebé",
+    "kickCounterDescription": "Registre los movimientos de su bebé",
     "kicks": "Patadas",
     "time": "Tiempo",
     "recordKick": "Registrar Patada",
-    "startCounting": "Empezar a Contar",
+    "startCounting": "Comenzar a Contar",
     "endSession": "Finalizar Sesión",
     "severityLabel": "Gravedad (1-5)",
     "notesLabel": "Notas",
-    "notesPlaceholder": "Añade cualquier nota aquí...",
+    "notesPlaceholder": "Añada notas aquí...",
     "removeSymptom": "Eliminar Síntoma",
-    "confirmRemoveSymptom": "¿Estás segura de que quieres eliminar este síntoma?",
-    "endKickSession": "Finalizar Sesión de Conteo de Patadas",
-    "kickSessionSummary": "Has registrado {{count}} patadas en {{time}}",
-    "kickNotesPlaceholder": "Añade cualquier nota sobre esta sesión de conteo de patadas...",
+    "confirmRemoveSymptom": "¿Está seguro de que desea eliminar este síntoma?",
+    "endKickSession": "Finalizar Sesión de Conteo",
+    "kickSessionSummary": "Ha registrado {{count}} patadas en {{time}}",
+    "kickNotesPlaceholder": "Añada notas sobre esta sesión de conteo de patadas...",
     "severity": "Gravedad",
+    "doctorLabel": "Médico",
     "symptoms": {
       "nausea": "Náuseas",
       "fatigue": "Fatiga",
@@ -354,23 +355,48 @@
     "title": "Citas",
     "upcomingTitle": "Próximas",
     "pastTitle": "Pasadas",
-    "addButton": "Añadir Cita",
-    "dateTimeLabel": "Fecha y Hora",
-    "locationLabel": "Ubicación",
+    "addButton": "Añadir cita",
+    "dateTimeLabel": "Fecha",
+    "locationLabel": "Lugar",
     "typeLabel": "Tipo",
     "titleLabel": "Título",
     "dateLabel": "Fecha",
     "timeLabel": "Hora",
     "descriptionLabel": "Descripción",
     "notesLabel": "Notas",
-    "reminderLabel": "Establecer Recordatorio",
+    "reminderLabel": "Establecer recordatorio",
+    "reminderTimeLabel": "Tiempo de recordatorio",
+    "minutesBefore": "min",
     "noAppointments": "No hay citas programadas",
-    "tapToAddAppointment": "Toca el botón de arriba para añadir tu primera cita",
-    "editAppointment": "Editar Cita",
-    "addNewAppointment": "Nueva Cita",
-    "titleRequired": "Por favor, introduce un título para la cita",
-    "titlePlaceholder": "Introduce el título de la cita",
-    "notesPlaceholder": "Introduce cualquier nota para esta cita"
+    "noPastAppointments": "No hay citas pasadas",
+    "tapToAddAppointment": "Toque el botón de arriba para añadir su primera cita",
+    "editAppointment": "Editar cita",
+    "addNewAppointment": "Nueva cita",
+    "titleRequired": "Por favor, introduzca un título para la cita",
+    "titlePlaceholder": "Introduzca el título de la cita",
+    "locationPlaceholder": "Introduzca el lugar",
+    "notesPlaceholder": "Añadir notas para esta cita",
+    "deleteConfirmTitle": "Eliminar cita",
+    "deleteConfirmMessage": "¿Está seguro de que desea eliminar esta cita?",
+    "error": "Error",
+    "findOnDoctolib": "Encontrar un médico en Doctolib",
+    "specialtyLabel": "Especialidad médica",
+    "specialtyPlaceholder": "ej. Obstetra, Ginecólogo",
+    "cityLabel": "Ciudad/Ubicación",
+    "cityPlaceholder": "ej. París, Lyon",
+    "searchDoctolib": "Buscar en Doctolib",
+    "doctolibInfo": "Será redirigido a Doctolib para hacer su cita. Las citas reservadas en Doctolib deberán añadirse manualmente a BumpBuddy.",
+    "doctolibError": "Error de conexión",
+    "doctolibErrorMessage": "No se pudo conectar con Doctolib. Por favor, compruebe su conexión a internet e inténtelo de nuevo.",
+    "source": "Fuente",
+    "importFromDoctolib": "Importar desde Doctolib",
+    "doctolibAppointmentFound": "Hemos notado que recientemente reservó una cita en Doctolib. ¿Desea importarla a BumpBuddy?",
+    "appointmentWith": "Cita con",
+    "importAppointment": "Importar esta cita",
+    "appointmentAdded": "Cita añadida",
+    "doctolibAppointmentImported": "La cita de Doctolib se ha importado con éxito a su calendario de BumpBuddy.",
+    "errorImportingAppointment": "Se produjo un error al importar la cita. Por favor, inténtelo de nuevo.",
+    "checkingDoctolib": "Comprobando citas de Doctolib..."
   },
   "settings": {
     "title": "Configuración",
