--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -166,6 +166,7 @@
     "kickSessionSummary": "Vous avez enregistré {{count}} mouvements en {{time}}",
     "kickNotesPlaceholder": "Ajoutez des notes sur cette session de comptage...",
     "severity": "Intensité",
+    "doctorLabel": "Médecin",
     "symptoms": {
       "nausea": "Nausée",
       "fatigue": "Fatigue",
@@ -354,8 +355,8 @@
     "title": "Rendez-vous",
     "upcomingTitle": "À venir",
     "pastTitle": "Passés",
-    "addButton": "Ajouter un Rendez-vous",
-    "dateTimeLabel": "Date et Heure",
+    "addButton": "Ajouter un rendez-vous",
+    "dateTimeLabel": "Date",
     "locationLabel": "Lieu",
     "typeLabel": "Type",
     "titleLabel": "Titre",
@@ -363,14 +364,39 @@
     "timeLabel": "Heure",
     "descriptionLabel": "Description",
     "notesLabel": "Notes",
-    "reminderLabel": "Définir un Rappel",
+    "reminderLabel": "Définir un rappel",
+    "reminderTimeLabel": "Délai de rappel",
+    "minutesBefore": "min",
     "noAppointments": "Aucun rendez-vous programmé",
+    "noPastAppointments": "Aucun rendez-vous passé",
     "tapToAddAppointment": "Appuyez sur le bouton ci-dessus pour ajouter votre premier rendez-vous",
-    "editAppointment": "Modifier le Rendez-vous",
-    "addNewAppointment": "Nouveau Rendez-vous",
-    "titleRequired": "Veuillez entrer un titre pour le rendez-vous",
+    "editAppointment": "Modifier le rendez-vous",
+    "addNewAppointment": "Nouveau rendez-vous",
+    "titleRequired": "Veuillez saisir un titre pour le rendez-vous",
     "titlePlaceholder": "Entrez le titre du rendez-vous",
-    "notesPlaceholder": "Entrez des notes pour ce rendez-vous"
+    "locationPlaceholder": "Entrez le lieu",
+    "notesPlaceholder": "Ajoutez des notes pour ce rendez-vous",
+    "deleteConfirmTitle": "Supprimer le rendez-vous",
+    "deleteConfirmMessage": "Êtes-vous sûr(e) de vouloir supprimer ce rendez-vous ?",
+    "error": "Erreur",
+    "findOnDoctolib": "Trouver un médecin sur Doctolib",
+    "specialtyLabel": "Spécialité médicale",
+    "specialtyPlaceholder": "ex: Obstétricien, Gynécologue",
+    "cityLabel": "Ville/Localité",
+    "cityPlaceholder": "ex: Paris, Lyon",
+    "searchDoctolib": "Rechercher sur Doctolib",
+    "doctolibInfo": "Vous serez redirigé vers Doctolib pour prendre votre rendez-vous. Les rendez-vous pris sur Doctolib devront être ajoutés manuellement à BumpBuddy.",
+    "doctolibError": "Erreur de connexion",
+    "doctolibErrorMessage": "Impossible de se connecter à Doctolib. Veuillez vérifier votre connexion internet et réessayer.",
+    "source": "Source",
+    "importFromDoctolib": "Importer depuis Doctolib",
+    "doctolibAppointmentFound": "Nous avons détecté que vous avez pris un rendez-vous sur Doctolib. Souhaitez-vous l'importer dans BumpBuddy ?",
+    "appointmentWith": "Rendez-vous avec",
+    "importAppointment": "Importer ce rendez-vous",
+    "appointmentAdded": "Rendez-vous ajouté",
+    "doctolibAppointmentImported": "Le rendez-vous Doctolib a été importé avec succès dans votre calendrier BumpBuddy.",
+    "errorImportingAppointment": "Une erreur s'est produite lors de l'importation du rendez-vous. Veuillez réessayer.",
+    "checkingDoctolib": "Vérification des rendez-vous Doctolib..."
   },
   "settings": {
     "title": "Paramètres",
