Add fetal size comparison feature with internationalization support
- Introduced new keys for fetal size comparison in English, Spanish, and French language files, enhancing user experience with localized content.
- Updated Redux store to include fetal size data management, allowing for dynamic fetching and display of fetal size information in HomeScreen, TimelineScreen, and WeekDetailScreen.
- Implemented FetalSizeComparison component to present fetal size data effectively, improving clarity and user engagement.
- Adjusted HomeScreen and TimelineScreen to fetch and display fetal size data based on the current pregnancy week, ensuring accurate representation.
- Enhanced internationalization support for new features, including measurement units and size comparison titles.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -152,7 +152,12 @@
     "length": "Length:",
     "weight": "Weight:",
     "noDataAvailable": "Size comparison data not available",
-    "accessibilityImageLabel": "Image showing a {{fruit}} that's about {{size}} in size"
+    "accessibilityImageLabel": "Image showing a {{fruit}} that's about {{size}} in size",
+    "comparisonTitle": "Size Comparison",
+    "thisWeekSize": "Baby's Size This Week",
+    "sizeLabel": "Size",
+    "weightLabel": "Weight",
+    "notAvailable": "Size comparison not available"
   },
   "health": {
     "title": "Health Tracker",
