Enhance fetal size comparison and unit toggle functionality
- Updated FetalSizeComparison component to handle default values for itemName and imageUrl, improving robustness.
- Integrated unit preference handling in FetalSizeComparison for dynamic display of measurements based on user settings.
- Refactored UnitToggle component to streamline unit switching and improve styling consistency.
- Enhanced internationalization support for measurement units in English, Spanish, and French language files.
- Added debug logging across components and services to facilitate easier troubleshooting and data verification.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -328,26 +328,21 @@
   "preferences": {
     "title": "Preferences",
     "themeSettings": "Theme Settings",
+    "languageSettings": "Language Settings",
+    "language": "Language",
     "darkMode": "Dark Mode",
-    "themeSelection": "Theme Selection",
-    "selectTheme": "Select theme",
     "themes": {
       "light": "Light",
       "dark": "Dark",
       "system": "System Default"
     },
-    "languageSettings": "Language Settings",
-    "language": "Language",
-    "selectLanguage": "Select language",
-    "measurementSettings": "Measurement Settings",
+    "themeSelection": "Theme Selection",
+    "selectTheme": "Select a theme",
+    "syncNow": "Sync Preferences",
+    "syncing": "Syncing...",
     "units": "Units",
-    "selectUnits": "Select units",
-    "unitTypes": {
-      "metric": "Metric (kg, cm)",
-      "imperial": "Imperial (lb, in)"
-    },
-    "syncNow": "Sync Now",
-    "syncing": "Syncing..."
+    "unitSelection": "Measurement Units",
+    "measurementSettings": "Measurement Settings"
   },
   "network": {
     "online": "Online",
@@ -366,9 +361,15 @@
     "waitingToSync": "Waiting to sync"
   },
   "units": {
+    "metric": "Metric",
+    "imperial": "Imperial",
+    "mm": "mm",
+    "in": "in",
+    "g": "g",
+    "oz": "oz",
     "cm": "cm",
-    "inches": "in",
-    "grams": "g",
-    "oz": "oz"
+    "feet": "ft",
+    "kg": "kg",
+    "lb": "lb"
   }
 }
