Enhance Timeline and Week Detail screens with UI/UX improvements
- Added new translation keys for loading states and week status indicators in English, Spanish, and French.
- Improved visual hierarchy and progress indicators in TimelineScreen, including trimester progress tracking and completion percentages.
- Modernized WeekDetailScreen with a card-based design and color-coded sections for better user experience.
- Fixed duplicate back button issue and removed custom back button implementation in favor of the navigation header.
- Enhanced loading and error states for improved user feedback.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -130,7 +130,14 @@
     "viewWeekDetails": "View Week Details",
     "nextWeek": "Next Week",
     "previousWeek": "Previous Week",
-    "loading": "Loading week information..."
+    "loading": "Loading week information...",
+    "completed": "Completed",
+    "refresh": "Refresh",
+    "refreshing": "Refreshing...",
+    "refreshSuccess": "Timeline data refreshed successfully",
+    "refreshError": "Failed to refresh timeline data",
+    "weeksLoaded": "{{total}} weeks loaded, {{filtered}} shown",
+    "currentWeekStatus": "Current: Week {{week}}"
   },
   "foodGuide": {
     "title": "Food Safety Guide",
