Update translation files for improved food guide and health tracking terminology
- Added new translation keys for food filters (filterAll, filterSafe, filterCaution, filterAvoid, noResults) in English, Spanish, and French.
- Introduced a notes key for consistent health tracking translations across all languages.
- Resolved missing translation warnings to enhance user experience.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -151,7 +151,12 @@
     "description": "Description",
     "all": "All",
     "safe": "Safe",
-    "caution": "Caution"
+    "caution": "Caution",
+    "filterAll": "All Foods",
+    "filterSafe": "Safe Foods",
+    "filterCaution": "Caution Foods",
+    "filterAvoid": "Foods to Avoid",
+    "noResults": "No foods found matching your search criteria"
   },
   "fetalSize": {
     "title": "Baby Size Comparison",
@@ -178,6 +183,7 @@
     "startCounting": "Start Counting",
     "endSession": "End Session",
     "severityLabel": "Severity (1-5)",
+    "notes": "Notes",
     "notesLabel": "Notes",
     "notesPlaceholder": "Add any notes here...",
     "removeSymptom": "Remove Symptom",
