Enhance Food Guide Screen with improved UI and functionality
- Updated translation files for food guide, adding new keys for loading states, error messages, and food statistics in English, Spanish, and French.
- Redesigned FoodItem and FoodDetails components for a modern card-based layout with enhanced safety indicators and descriptions.
- Implemented a modal for food details with improved accessibility and user experience.
- Enhanced safety filter buttons with dynamic styling based on selection and safety ratings.
- Improved loading and error handling states for better user feedback during data fetching.

--- a/bumpbuddy/src/i18n/languages/en.json
+++ b/bumpbuddy/src/i18n/languages/en.json
@@ -156,7 +156,13 @@
     "filterSafe": "Safe Foods",
     "filterCaution": "Caution Foods",
     "filterAvoid": "Foods to Avoid",
-    "noResults": "No foods found matching your search criteria"
+    "noResults": "No foods found",
+    "noResultsDescription": "Try adjusting your search or filters to find more foods",
+    "viewDetails": "View Details",
+    "loading": "Loading foods...",
+    "errorLoading": "Error loading food data",
+    "tryAgain": "Try Again",
+    "totalFoods": "{{count}} foods"
   },
   "fetalSize": {
     "title": "Baby Size Comparison",
