Enhance fetal size illustrations and update French translations
- Added playful illustrations for fetal sizes from weeks 1 to 4, enhancing the visual appeal of the pregnancy app.
- Updated French translation for the "completed" status to "Terminée" for improved accuracy.
- Refactored TimelineScreen to display fetal size images directly in week circles, removing the separate FetalSizeComparison component for a cleaner UI.

--- a/bumpbuddy/src/i18n/languages/fr.json
+++ b/bumpbuddy/src/i18n/languages/fr.json
@@ -131,7 +131,7 @@
     "nextWeek": "Semaine Suivante",
     "previousWeek": "Semaine Précédente",
     "loading": "Chargement des informations de la semaine...",
-    "completed": "Terminé",
+    "completed": "Terminée",
     "refresh": "Actualiser",
     "refreshing": "Actualisation...",
     "refreshSuccess": "Données de chronologie actualisées avec succès",
